Agregue el nuevo nombre desde visual

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Pedro Manuel Armas Chang - 209342</h1>
-    <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>   
+    <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>  
+    <h2>Joshua Eli Isaac Raaliquez Sosa - 2019342</h2> 
+    
 </body>
 </html>
