Agregue la hoja de estilos

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Pedro Manuel Armas Chang - 209342</h1>
     <h2>Joshua Elí Isaac Realiquez Sosa - 2019342 </h2>   
+    <h2>Isaac Realiquez</h2>
 </body>
 </html>
